style.css
/* ... */
.resultIcon {
  filter: invert();
}

.resultBox {
  background-image: url('images/loading_dark.gif');
}
.removeButton {
  filter: invert();
}

::selection {
  background-color: var(--primary1);
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: var(--secondary2);
  margin: 20px;
}

::-webkit-scrollbar-thumb {
  background: var(--black);
  border-radius: 10px;
}

:focus {
  outline: none;
}

* {
  margin: 0;
  padding: 0;
  font-family: 'CabinetGrotesk-Variable';
  /* cursor: url('images/pointer.svg') 4 5, pointer; */
  cursor: default;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

body {
  background-color: var(--secondary1);
  overflow: hidden;
}

table {
  border-collapse: separate;
  color: var(--black);
  border-radius: 10px;
  border: 1px solid var(--gray);
  padding: 10px;
  width: 100%;
  margin-bottom: 10px;
}
td:nth-child(1) {
  color: var(--bright);
}
td:nth-child(2) {
  text-align: right;
}
tr:nth-child(1) td {
  padding-top: 0;
}
tr:nth-last-child(1) td {
  border: none;
  padding-bottom: 0;
}
td {
  padding: 10px;
  border-bottom: 1px solid var(--gray);
}

p,
h1,
input,
textarea {
  color: var(--black);
}

::-webkit-search-cancel-button {
  display: none;
}

input {
  cursor: text;
  width: auto;
  height: auto;
  border-radius: 10px;
  border: 1px solid var(--primary1);
  background-color: var(--primary1);
  pointer-events: all;
  font-size: 16px;
  padding: 10px;
  app-region: none;
}

input:focus,
textarea:focus {
  background-color: var(--primary2);
}

input:hover {
  border-color: var(--primary0);
}

input[type='search'] {
  min-width: 300px;
  background-image: url(images/search.svg);
  background-repeat: no-repeat;
  background-size: 20px;
  background-position: center right;
  background-position-x: calc(100% - 20px);
  height: 50px;
  cursor: text;
}

h1 {
  color: var(--bright);
  font-size: 24px;
  text-align: left;
  margin: auto;
  margin-left: 40px;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20%;
  width: 100%;
  background-color: var(--secondary2);
}

.quickmarkButton {
  height: 32px;
  width: 32px;
  opacity: 0.5;
  visibility: hidden;

  background-position: center;
  background-repeat: no-repeat;
}

.quickmarkButton:hover {
  opacity: 1;
}

#removeQuickmark {
  background-image: url(images/remove_quickmark.svg);
}

#openQuickmark {
  background-image: url(images/open_quickmark.svg);
}

li {
  list-style: none;
}

.quickmark {
  padding: 20px;
  height: fit-content;
}

.quickmarkWrapper {
  padding: 20px;
  border-radius: 0px 0px 20px 20px;
  height: 300px;
  width: 200px;
  display: flex;
  background-color: rgba(159, 239, 255, 0.5);
  background-image: url('images/noise.png');
  background-size: contain;
  background-position: bottom;
  background-repeat: no-repeat;
  background-blend-mode: multiply;
  flex-direction: column;
  gap: 10px;
  cursor: grab;

  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
}

.quickmarkWrapper:hover {
  background-image: url(images/paper_peel.png);
}

.quickmark:active {
  cursor: grabbing;
}

.quickmark:hover {
  background-color: var(--primary4);
}

.quickmark:hover .quickmarkButton {
  visibility: visible;
}

#navLogo {
  background-image: url('images/stellar_lockup.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 20px;
  width: auto;
  margin: 0px;
  padding: 10px;
}

#automationTasks {
  height: 100%;
  width: calc(100% - 60px);
  margin: 10px;
  overflow-y: scroll;
  overflow-x: hidden;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
  gap: 10px;
  padding: 20px;
  align-content: start;
  background-size: 50px;
  background-repeat: no-repeat;
  background-position: center;
  margin-bottom: 0;
  margin-top: 0;
}

#automationTasks[status='none'] {
  background-image: none;
}

#automationTasks[status='offline'] {
  background-image: url('images/offline_dark.svg');
}

#automationTasks[status='loading'] {
  background-image: url('images/loading_dark.gif');
}

#automationStatus {
  margin-top: 10px;
  display: flex;
  grid-template-areas: 'title meter search';
  height: 60px;
  padding: 10px;
  border-radius: 20px;
  margin-bottom: 10px;
  width: calc(100% - 40px);
  margin-left: 0;
  gap: 10px;
  background-color: transparent;
  border: 1px solid var(--primary0);
  app-region: drag;
}

#resourceMonitor {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  app-region: none;
}

.meterFill {
  background-color: var(--secondary1);
  background-blend-mode: screen;
  background-image: url('images/led_dots.webp');
  background-size: 70px;
  height: 100%;
  width: auto;
  border-radius: 5px 5px 10px 0px;
}

.resourceMeter {
  box-sizing: border-box;
  border-width: 0px 2px 2px 2px;
  border-style: solid;
  border-color: var(--gray);
  border-radius: 0px 0px 15px 15px;
  width: 90px;
  height: auto;
  padding: 5px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  position: relative;
}

.cardGroup {
  padding: 0px 20px 20px 20px;
  background-color: var(--secondary2);
  height: 100%;
  border-radius: 20px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.quickmarkNote {
  color: black !important;
  font-size: 24px;
  opacity: 0.5;
}

#quickmarkList {
  box-sizing: border-box;
  height: 80%;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  padding: 80px;
  overflow-y: scroll;
  position: absolute;
  bottom: 0;
}
/* ... */

